# amex-offers

./: .gitattributes  .gitignore  AmexInterface.py  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  tox.ini
src/amex_interface/: __init__.py  amex_interface.py
src/amex_offers/: amex_auth.py  amex_interface.py  amex_offers.py  chrome_driver.py
tests/: data.py  test_parse_email.py
tests/data/: email.html
